2006-02-21  Richard Dale  <rdale@foton.es>
* Add the pid to the filename of the Unix domain socket used by the ruby
  debugger so that more than one instance of KDevelop can be run on a
    machine.
  
2006-02-17  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
* Removed the 'Type' column from the Ruby debugger as the C++
  debugger no longer has one

2006-01-30  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
* Added file templates for Rails projects; rhtml, rxml, css and js
* Fixed documentation links for QtRuby/Korundum, added some
  links for Rails

2006-01-19  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
* Added a Rails project template
* Use the Run menu option to start WEBrick. If the Rails project doesn't
  exist it will be created.
* The script/console runs in the Terminal instead of irb

2005-08-17  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
* The $SHELL environment variable is set to 'irb' for ruby projects.
* Added a project option to customise the ruby shell
* A 'def cd(dir) Dir.chdir dir end' line must be added to your
  .irbrc file to prevent syntax errors when konsole changes directory

2005-06-28  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
  * Fixed bug in 'run main program' project option where the .ui file was out of 
    sync with the code
  * Add a 'show constants in debugger' project option. This is needed because there
    are so many constants in the qtruby/korundum classes that it slows the debugger
    right down and clutters the variables view.
  * Added a 'Trace into Ruby' project option to show ruby code from installed libraries
    in the debugger.
  * The debugger can now expand instance variables nested within instance variables
    using get_instance_variable().
  * Improved the parsing of pretty printed items that are all on one line, as opposed to
    one line per name=value pair.

2005-06-25 Pieter Pareit <pieter.pareit@scarlet.be>
  * Added ruby_{run,config} icons, the .png files are used by kdevelop,