@@ -1,4 +1,7 @@
 2006-02-21  Richard Dale  <rdale@foton.es>
+* Disable the new file sidetab by default
+
+2006-02-21  Richard Dale  <rdale@foton.es>
 * Add the pid to the filename of the Unix domain socket used by the ruby
   debugger so that more than one instance of KDevelop can be run on a
     machine.
